# halo2msm

./: Cargo.toml
src/: lib.rs
src/msm_fix/: assignments.rs  config.rs  tests.rs
src/msm_var/bucket/: instructions.rs
src/msm_var/bucket/narrow/: assignments.rs  config.rs  msm.rs  rw.rs
src/msm_var/bucket/wide/: assignments.rs  config.rs  msm.rs  rw.rs
src/msm_var/sliding/: instructions.rs
src/msm_var/sliding/narrow/: assignments.rs  config.rs  msm.rs
src/msm_var/sliding/wide/: assignments.rs  config.rs  msm.rs
